Remove redundant assumed uuid list