@@ -15,17 +15,7 @@
 
 package org.alfasoftware.morf.upgrade;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.lang.reflect.Constructor;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
+import com.google.common.collect.Lists;
 import org.alfasoftware.morf.metadata.Schema;
 import org.alfasoftware.morf.metadata.SchemaHomology;
 import org.alfasoftware.morf.metadata.SchemaHomology.DifferenceWriter;
@@ -33,9 +23,13 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Lists;
+import java.lang.reflect.Constructor;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * Determines an upgrade path if possible between the current schema definition and a target.
@@ -74,7 +68,7 @@ public class UpgradePathFinder {
    */
   public UpgradePathFinder(Collection<Class<? extends UpgradeStep>> availableUpgradeSteps, Set<java.util.UUID> stepsAlreadyApplied) {
     this.upgradeGraph = new UpgradeGraph(availableUpgradeSteps);
-    this.stepsAlreadyApplied = addAssumedAppliedUUIDs(stepsAlreadyApplied);
+    this.stepsAlreadyApplied = stepsAlreadyApplied;
 
     this.stepsToApply = upgradeStepsToApply();
   }
@@ -117,13 +111,13 @@ public class UpgradePathFinder {
 
     // We have changes to make. Apply them against the current schema to see whether they get us the right position
     Schema trialUpgradedSchema = schemaChangeSequence.applyToSchema(current);
-    if (!schemasMatch(target, trialUpgradedSchema, APPLICATION_SCHEMA, UPGRADED_SCHEMA, exceptionRegexes)) {
+    if (schemasNotMatch(target, trialUpgradedSchema, APPLICATION_SCHEMA, UPGRADED_SCHEMA, exceptionRegexes)) {
       throw new NoUpgradePathExistsException();
     }
 
     // Now reverse-apply those changes to see whether they get us back to where we started
     Schema reversal = schemaChangeSequence.applyInReverseToSchema(trialUpgradedSchema);
-    if (!schemasMatch(reversal, current, REVERSED_SCHEMA, CURRENT_SCHEMA, exceptionRegexes)) {
+    if (schemasNotMatch(reversal, current, REVERSED_SCHEMA, CURRENT_SCHEMA, exceptionRegexes)) {
       throw new IllegalStateException("Upgrade reversals are invalid");
     }
 
@@ -167,14 +161,9 @@ public class UpgradePathFinder {
   private List<CandidateStep> upgradeStepsToApply() {
     final Map<java.util.UUID, CandidateStep> candidateSteps = candidateStepsByUUID();
 
-    List<CandidateStep> steps = FluentIterable.from(candidateSteps.values())
-        .filter(new Predicate<CandidateStep>() {
-          @Override public boolean apply(CandidateStep step) {
-            return step.isApplicable(stepsAlreadyApplied, candidateSteps);
-          }})
-        .toList();
-
-    return steps;
+    return candidateSteps.values().stream()
+            .filter(step -> step.isApplicable(stepsAlreadyApplied, candidateSteps))
+            .collect(Collectors.toList());
   }
 
 
@@ -209,60 +198,19 @@ public class UpgradePathFinder {
    * @param firstSchemaContext Context of the target schema for logging.
    * @param secondScehmaContext Context of the trial schema for logging.
    * @param exceptionRegexes Regular exceptions for the table exceptions.
-   * @return True if the schemas match.
+   * @return True if the schemas don't match.
    */
-  private boolean schemasMatch(Schema targetSchema, Schema trialSchema, String firstSchemaContext, String secondScehmaContext, Collection<String> exceptionRegexes) {
+  private boolean schemasNotMatch(Schema targetSchema, Schema trialSchema, String firstSchemaContext, String secondScehmaContext, Collection<String> exceptionRegexes) {
     log.info("Comparing schema [" + firstSchemaContext + "] to [" + secondScehmaContext + "]");
-    DifferenceWriter differenceWriter = new DifferenceWriter() {
-      @Override
-      public void difference(String message) {
-        log.info(message);
-      }
-    };
+    DifferenceWriter differenceWriter = log::info;
 
     SchemaHomology homology = new SchemaHomology(differenceWriter, firstSchemaContext, secondScehmaContext );
     if (homology.schemasMatch(targetSchema, trialSchema, exceptionRegexes)) {
       log.info("Schemas match");
-      return true;
+      return false;
     } else {
       log.info("Schema differences found");
-      return false;
-    }
-  }
-
-
-  /**
-   * For backwards compatibility, we need to assume the presence of some UUIDs - the ones which were added prior to the introduction of the UpgradeAudit table.
-   *
-   * @param loadedUUIDS
-   * @return
-   */
-  private Set<java.util.UUID> addAssumedAppliedUUIDs(Set<java.util.UUID> loadedUUIDS) {
-
-    // The UpgradeAudit table was added in 5.0.18
-    java.util.UUID addUpgradeAuditUUID = java.util.UUID.fromString("5521d849-39b7-4f6f-b95d-5625eac947a7");
-
-    // This step (ProvisionHistoryUpgrade, but it doesn't really matter) was added in 5.0.17
-    java.util.UUID some5017UUID = java.util.UUID.fromString("521cb292-9722-4655-a462-aaee8ee19185");
-
-    if (loadedUUIDS.contains(addUpgradeAuditUUID) && !loadedUUIDS.contains(some5017UUID)) {
-      log.debug("Assuming the presence of steps in 5.0.18 and earlier");
-
-      Set<java.util.UUID> result = new HashSet<>(loadedUUIDS);
-      try (BufferedReader reader = new BufferedReader(new InputStreamReader(UpgradePathFinder.class.getResourceAsStream("AssumedUUIDs.txt"), "UTF-8"))) {
-        // these are all the steps from the start of time to the end of 5.0.18
-        String line = reader.readLine();
-        while (line != null) {
-          result.add(java.util.UUID.fromString(line));
-          line = reader.readLine();
-        }
-      } catch (IOException ioe) {
-        throw new RuntimeException(ioe);
-      }
-      return result;
-    } else {
-      log.debug("Using literal content of UpgradeAudit");
-      return loadedUUIDS;
+      return true;
     }
   }
 
